--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
 body {
   font-family: Arial, sans-serif;
-  background-color: #C4ced4;
+  color: #000000
+  background-color: #F5F5F5
+   <!-- magic silver #C4ced4 -->
+  <!-- magic blue #0077c0 -->
 }
 
 /* Heading styles */
